--- a/templates/selecionar_pedido.html
+++ b/templates/selecionar_pedido.html
@@ -15,10 +15,10 @@
 			<!-- Pesquisa simples -->
 			<form action="{{url_for('results_pedido_mesa')}}" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="data_pedido">Numero Mesa</label>
+					<label for="numero_da_mesa">Numero Mesa</label>
 					<div class="input-group">
 						<input type="number" name="nro_mesa" id="nro_mesa
-						" class="form-control" placeholder="Busca Pedido pela data">
+						" class="form-control" placeholder="Busca Pedido pelo Numero da Mesa">
 						    <span class="input-group-btn">
 						    	<button type="submit" class="btn btn-danger">Buscar!</button>
 							</span>
