--- a/templates/selecionar_prato.html
+++ b/templates/selecionar_prato.html
@@ -26,14 +26,28 @@
 			</form>
 			<hr>
 			<!-- pesquisa Complexa -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('results_prato_mes') }}" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_prato">Algo complexo</label>
+					<label for="mes">Prato mais vendido</label>
 					<div class="input-group">
-						<input type="text" name="nome_prato" id="nome_prato" class="form-control" placeholder="Busca prato por algo">
-						    <span class="input-group-btn">
-						    	<button type="submit" class="btn btn-danger">Buscar!</button>
-							</span>
+						<select class="form-control" id="mes" name="mes">
+							<option value="">Selecionar Prato mais pedido do mes</option>
+							<option value="1">Janeiro</option>
+							<option value="2">Fevereiro</option>
+							<option value="3">Março</option>
+							<option value="4">Abril</option>
+							<option value="5">Maio</option>
+							<option value="6">Junho</option>
+							<option value="7">Julho</option>
+							<option value="8">Agosto</option>
+							<option value="9">Setembro</option>
+							<option value="10">Outubro</option>
+							<option value="11">Novembro</option>
+							<option value="12">dezembro</option>
+						</select>
+					    <span class="input-group-btn">
+					    	<button type="submit" class="btn btn-danger">Buscar!</button>
+						</span>
 					</div>
 				</div>
 			</form>
