--- a/templates/cadastro/cadastro_cozinheiro.html
+++ b/templates/cadastro/cadastro_cozinheiro.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class="form-group">
 					<label for="chefe">Chefe:</label>
-  					<select class="selectpicker" id="chefe" name="cpfChefe">
+  					<select class="form-control" id="chefe" name="cpfChefe">
 						<option value="">--</option>
 						{% for row in results %}
 					  		<option value="{{ row[0] }}">{{ row[3] }}</option>
