--- a/templates/cadastro/cadastro_prato.html
+++ b/templates/cadastro/cadastro_prato.html
@@ -16,6 +16,10 @@
 					<label for="nome_prato">Nome Prato</label>
 					<input type="text" name="nome_prato" id="nome_prato" class="form-control">	
 				</div>
+				<div class="form-group">
+					<label for="c1">Preco</label>
+			        <input type="number" min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" c1="c1" name="c1" class="form-control"/>
+				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
 				</div>
