--- a/templates/exibir_prato.html
+++ b/templates/exibir_prato.html
@@ -20,6 +20,8 @@
 				<li><p><div class="estilo">ID:</div>{{ row[0] }}</p></li>
 				<hr>
 				<li><p><div class="estilo">Nome:</div>{{ row[1] }}  <a href="{{ url_for('prato_nome', id=row[0]) }}" class="btn btn-default">alterar</a></p></li>
+				<hr>
+				<li><p><div class="estilo">Preco:</div>R$ {{ row[2] }}  <a href="{{ url_for('prato_preco', id=row[0]) }}" class="btn btn-default">alterar</a></p></li>
 			</ul>
 			<hr>
 			<div class="text-right">
