--- a/templates/layout/layout1.html
+++ b/templates/layout/layout1.html
@@ -59,9 +59,9 @@
 		
 			<div class="container text-center ">
 				<ul class="list-inline">
-					<li><p><a>GitHub</a></p></li>
+					<li><p>Sistema My Restaurant</p></li>
 				</ul>
-				<p>Projetado para a disciplina de banco de dado 1 pelos alunos <a href="">Igor</a> e <a href="">João</a> <br>Feito com o <a href="#">Python</a></p>
+				<p>Projetado para a disciplina de banco de dado 1 pelos alunos <a href="https://github.com/igorFaustino" target="_blank">Igor</a> e <a href="https://github.com/JoaoVictorNascimento" target="_blank">João</a> <br>Feito com o <a href="https://www.python.org/" target="_blank">Python</a></p>
 			</div>
 			<!-- fim conteudo -->
 		</div>
