--- a/templates/listar_resultados_mesaLivres.html
+++ b/templates/listar_resultados_mesaLivres.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block table_head %}
-	<th class="text-center">Id</th>
-	<th class="text-center">nroPessoas</th>
+	<th class="text-center">Numero da Mesa</th>
+	<th class="text-center">Numero de Pessoas</th>
 {% endblock %}
 
 {% block table_body %}
