--- a/templates/cadastro/cadastro_prato.html
+++ b/templates/cadastro/cadastro_prato.html
@@ -17,7 +17,7 @@
 					<input type="text" name="nome_prato" id="nome_prato" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="c1">Preco</label>
+					<label for="c1">Preço</label>
 			        <input type="number" min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" c1="c1" name="c1" class="form-control"/>
 				</div>
 				<div class="text-center">
